1999-08-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Symbol.m: Remove common globals _obj_globalZone, _obj_scratchZone,
	_obj_initZone, _obj_sessionZone.

1999-08-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (alignment_for_objc_type): Handle long long.

	* DefObject.m ([Object_s -lispIn:]): Use convertToType:
	instead of memcpy.

1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.m (lispInInteger): Don't do type check here (it's now
	in getInteger).

	* DefObject.m ([Object_s -lispIn:]): Handle long double and
	long long. 

	* DefClass.m ([CreatedClass_s -lispInCreate:]): Use getUnsigned
	instead of getInteger.

	* directory.m (swarm_directory_get_language_independent_class_name): 
	Referenced object needn't be a proxy.

1999-08-12  Alex Lancaster  <alex@santafe.edu>

	* DefObject.m: Move include of directory.h, outside HAVE_JDK,
	require swarm_directory_get_language_independent_class_name
	function in non-Java context.

	* directory.h: Likewise.

	* directory.m: Protect include of javavars.h with HAVE_JDK.

1999-08-11  Alex Lancaster  <alex@santafe.edu>

	* directory.[hm]
	(swarm_directory_get_language_independent_class_name): New
	function, performs a directory lookup to returns the Java class
	name the Java proxy, if there is one, otherwise defaults to the
	Objective C.

	* DefObject.m ([Object_s -getName]): Use new function.

1999-08-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m: Move all c_*, m_*, and f_* Java variables to
	javavars.h. (create_method_refs): Replace m_StringValueOf with
	m_StringValueOf{Boolean,Char,Int,Long,Float,Double,Object}.

	* Makefile.am (defobj_HEADERS): Add javavars.h.

	* javavars.h: New file.

1999-08-10  Marcus Daniels  <mgd@caos.santafe.edu>

	* directory.m (swarm_directory_ensure_selector): Add trailing
	colon if one is needed but is absent in Java spec.

1999-08-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
